tests/NormalTests/paczka1/small_fuzzy/64466643.err
Error in line 3: jPo0 S750 46,7
Error in line 9: 2GEZvFw8Lfv S750 84,7
Error in line 8: A911 S750 25,5
